fixed mobile header jumping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,6 +159,10 @@ footer p {
   width: 100%;
 }
 
+.non-sticky + .header {
+  padding-top: 102px;
+}
+
 .sticky + .header {
   padding-top: 102px;
 }
